--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,33 @@ dist
 
 
 
+*.class
+*.log
+*~
+
+# sbt specific
+.cache/
+.history/
+.lib/
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.sbt/
+project/SbtGitUtils.scala
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.settings/
+.classpath
+.project
+/bin
+
 /.idea
+/*.iml
+/out
 /.idea_modules
-/.classpath
-/.project
-/.settings
 /RUNNING_PID
+.DS_Store
